Update and rename 生日快乐.html to index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="after"></div>
     </div>
     <h1>Feliz Cumpleaños Pratik!</h1>
-    <h2 class="aaa">Happy Birthday Bro!</h2>
+    <h2 class="aaa">Happy Birthday!</h2>
     <span>🎉</span>
     <div class="candle">
         <div id="flame" class="lit"></div>
